--- a/qr code/index.html
+++ b/qr code/index.html
@@ -12,9 +12,11 @@
   <style>
     body{
       width: 100%;
-      height: 100vh;
+      min-height: 100vh;
       background: hsl(212, 45%, 89%);
       display: flex;
+      flex-direction: column;
+      align-items: center;
       justify-content: center;
 
     }
@@ -23,16 +25,11 @@
       align-items: center;
       justify-content: center;
       background:  hsl(0, 0%, 100%);
-      padding-left: 10px;
-      padding-top: 10px;
-      padding-right: 10px;
-      margin: 70px 550px;
-      margin-bottom: 100px;
+      padding: 10px 10px 10px 10px;
+      width: 20rem;
     }
     img{
-      width: 250px;
-      background: #fff;
-      border: none;
+      width: 100%;
       border-radius: 25px;
 
     }
@@ -60,17 +57,20 @@
   </style>
 </head>
 <body>
-  <div class="container">
-    <div class="qr">
-      <img src="images/image-qr-code.png" alt="" class="qr-img">
+  <main>
+    <div class="container">
+      <div class="qr">
+        <img src="images/image-qr-code.png" alt="" class="qr-img">
+      </div>
+      <div class="footer">
+        <p class="p-1">Improve your front-end skills by building projects</p>
+        <p class="p-2">
+          Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+      </div>
+      
     </div>
-    <div class="footer">
-      <p class="p-1">Improve your front-end skills by building projects</p>
-      <p class="p-2">
-        Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
-    </div>
-    
-  </div>
+  </main>
+  
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Nilesh Choudhary</a>.
